# soundcoop

./: .gitignore  CITATION.cff  LICENSE  README.md  Sound_and_env_data.ipynb  Using Minio to access GCP.ipynb  download_JOMOPANS_from_rw.ipynb  environment.yml  hybrid_millidecade_bands.ipynb  hybrid_millidecade_bands_with_pypam.ipynb  pbp-demonstration.ipynb  pbp-plots.ipynb  plot_sound_env_clim_data-MFM.ipynb  plot_sound_env_clim_data.ipynb  plot_sound_environmental_and_climatology_data.ipynb  pyproject.toml  requirements.txt
.binder/: postBuild
0_download_data/: download_ESONS_from_rw.ipynb  download_JOMOPANS_from_rw.ipynb  use_minio_to_access_GCP.ipynb
1_process_to_HMD_pbp/: README.md  pbp-plots.ipynb
1_process_to_HMD_pbp/MARS/: gen_HMD_MARS_icListen.ipynb
1_process_to_HMD_pbp/MARS/calibration/: icListen1689_sensitivity_hms256kHz.nc
1_process_to_HMD_pbp/MARS/metadata/attribute/: globalAttributes.yaml  variableAttributes.yaml
1_process_to_HMD_pbp/MB05/: gen_HMD_MB05_SoundTrap.ipynb
1_process_to_HMD_pbp/MB05/metadata/attribute/: globalAttributes_MB05.yaml  variableAttributes_MB05.yaml
1_process_to_HMD_pbp/NRS11/: gen_HMD_NRS11_Haruphone.ipynb
1_process_to_HMD_pbp/NRS11/metadata/attribute/: globalAttributes_NRS11.yaml  (+1 more)
2_analysis_of_HMD_pypam/: README.md  data_analysis_with_pypam.ipynb  dimension_reduction_and_clustering.ipynb  download_data.py  postBuild
3_HMD_environmental_data/: plot_sound_environmental_and_climatology_data.ipynb
paper_figures/: HMD_CaseStudy_1.ipynb  HMD_CaseStudy_2.ipynb  HMD_CaseStudy_3.ipynb  HMD_CaseStudy_4.ipynb
(+1 files in other folders)
